[tool.poetry]
name = "npg_langqc"
packages = [
  { include = "lang_qc" },
]
version = "0.3.0"
description = "FastAPI application for Long Read QC"
authors = ["Adam Blanchet <ab59@sanger.ac.uk>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { version = "^0.78", extras = ["standard"] }
uvicorn = { version = "^0.17", extras = ["standard"] }
ml-warehouse = { git = "https://github.com/wtsi-npg/ml-warehouse-python.git", tag="1.0.0" }
SQLAlchemy = { version = "^1.4.35", extras = ["pymysql"] }
pydantic = "^1.9.0"
npg_id_generation = { git = "https://github.com/wtsi-npg/npg_id_generation.git", branch="1.0.1"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"
fastapi = { extras = ["all"], version = "^0.78.0" }
sqlacodegen = { git = "http://github.com/agronholm/sqlacodegen.git", tag="3.0.0rc1" }
alembic = "^1.8.1"
isort = { version = "^5.10.1", extras = ["colors"] }
pandas = "1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "lang_qc/db/qc_schema.py"

[tool.isort]
profile = "black"
